--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <link rel="stylesheet" type="text/css" href="css/marks.css"/>
     </head>
     <body>
-        <script src="js/libs/jquery.min.js"></script>
-        <script src="js/libs/knockout-min.js"></script>
+        <script src="lib/jquery.min.js"></script>
+        <script src="lib/knockout-min.js"></script>
 
         <table>
             <tr>
@@ -26,6 +26,6 @@
         <textarea id="japanese-input" data-bind="textInput: inputText"></textarea>
         <pre data-bind="text: textAsHtml"></pre>
 
-        <script src="js/app.js"></script>
+        <script src="src/app.js"></script>
     </body>
 </html>
