--- a/tests.html
+++ b/tests.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8"/>
-    </head>
-    <body>
-        <script src="js/libs/jquery.min.js"></script>
-        <script src="js/libs/knockout-min.js"></script>
-        <script src="js/app.js"></script>
-        <script src="js/app.tests.js"></script>
-    </body>
+<head>
+  <meta charset="utf-8">
+  <title>Jasmine Spec Runner v2.8.0</title>
+
+  <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.8.0/jasmine_favicon.png">
+  <link rel="stylesheet" href="lib/jasmine-2.8.0/jasmine.css">
+
+  <script src="lib/jasmine-2.8.0/jasmine.js"></script>
+  <script src="lib/jasmine-2.8.0/jasmine-html.js"></script>
+  <script src="lib/jasmine-2.8.0/boot.js"></script>
+
+  <script src="lib/knockout-min.js"></script>
+
+  <!-- include source files here... -->
+  <script src="src/app.js"></script>
+  <script src="src/models/KanaText.js"></script>
+
+  <!-- include spec files here... -->
+  <script src="spec/app.tests.js"></script>
+  <script src="spec/KanaText.tests.js"></script>
+
+</head>
+
+<body>
+</body>
 </html>
